# TryzhangClientsideAgent

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: client_core.rs  main.rs
client/src/api/: api.rs
java_native/: Cargo.toml
java_native/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  server_core.rs
testexe/: Cargo.toml
testexe/src/: main.rs
