[package]
edition = "2024"
name = "client"
version = "0.1.0"

[dependencies]
futures = {workspace = true} 
tokio = {workspace = true} 
windows = {workspace = true}
jsonwebtoken = "9.3.1"
tokio_kcp = "0.9.8"
reqwest = { version = "0.12.15", features = ["blocking", "__rustls", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rustls = "0.23.26"
webpki-roots = "0.26.9"
once_cell = "1.21.3"
anyhow = "1.0.98"